hard-gists/380c24afec20963617c82c43590b78f2/run.log
=== Docker Run Log for 380c24afec20963617c82c43590b78f2 ===
Started at: Mi 29. Okt 14:00:59 CET 2025

[2025-10-29 14:00:59] START: Running container for 380c24afec20963617c82c43590b78f2
[2025-10-29 14:00:59] SUCCESS: Container 63c53f1ffa433ed7fac153982b07b55a936eed693b8dffcb0c431591aa41255e started for 380c24afec20963617c82c43590b78f2
=== Container logs for 380c24afec20963617c82c43590b78f2 ===
  File "/snippet.py", line 209
    print '%s --> %s' % (head_tok, mod_tok)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 380c24afec20963617c82c43590b78f2 ===
[2025-10-29 14:01:01] INFO: Container 63c53f1ffa433ed7fac153982b07b55a936eed693b8dffcb0c431591aa41255e has stopped
